--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,12 @@ nav:
       - Pronunciació: tema1/pronunciacio.md
       - Com s’escriu?: tema1/com-sescriu.md
       - Activitats: tema1/activitats.md
+      - Fonemes i esperits: tema1/fonemes-i-esperits.md
+      - Accents i paraules àtones: tema1/accents.md
+      - Paraules àtones: tema1/atones.md
+      - Signes ortogràfics: tema1/signes-ortografics.md
+      - Activitats de signes i accents: tema1/activitats-accents.md
+      - Autoavaluació: tema1/autoavaluacio.md
 
 
 
