--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,18 @@ nav:
       - Signes ortogràfics: tema1/signes-ortografics.md
       - Activitats de signes i accents: tema1/activitats-accents.md
       - Autoavaluació: tema1/autoavaluacio.md
+  - "Tema 2: Morfologia i sintaxi gregues":
+      - Llengua flexiva: tema2/1-llengua-flexiva.md
+      - Funcions i casos: tema2/2-Funcions-Prin-Casos.md
+      - Activitats: tema2/3-Activitats.md
+  - "Tema 3: L’article i 2a declinació":
+      - L’article: tema3/1-article.md
+      - Segona declinació: tema3/2-naDecli.md
+      - Guia per a traduir: tema3/3-guia-traduccio.md
+      - Etimologia: tema3/4-etimologia.md
+      - Prefixos, sufixos i lexemes: tema3/5-prefixos-suf-lex.md
+      - Activitats: tema3/6-Activitats.md
+
 
 
 
