--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,6 +88,11 @@ nav:
       - Etimologia: tema3/4-etimologia.md
       - Prefixos, sufixos i lexemes: tema3/5-prefixos-suf-lex.md
       - Activitats: tema3/6-Activitats.md
+  - "Tema 4: Flexió verbal i present d’indicatiu":
+      - Introducció i tipus de verb: tema4/1-flexio-verbal.md
+      - Desinències i temes verbals: tema4/2-desinencies-temes.md
+      - Verb λύω i εἰμί: tema4/3-verb-luo-eimi.md
+      - Activitats i autoavaluació: tema4/4-activitats.md
 
 
 
