--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,7 +93,25 @@ nav:
       - Desinències i temes verbals: tema4/2-desinencies-temes.md
       - Verb λύω i εἰμί: tema4/3-verb-luo-eimi.md
       - Activitats i autoavaluació: tema4/4-activitats.md
-
+  - "Tema 5: 1a declinació. Adjectius":
+      - 1a declinació: tema5/1-1aDeclinacio.md
+      - Activitats 1: tema5/2-Activitats.md
+      - Adjectius grecs i de 1a classe: tema5/3-adjectius.md
+      - Activitats 2: tema5/4-Activitats.md
+      - Adverbis de mode: tema5/5-AdverbMod.md
+      - Activitats 3: tema5/6-Activitats.md
+      - Autoavaluació: tema5/7-Autoavaluacio.md
+      - Vocabulari (substantius): tema5/8-Vocabulari.md
+      - Vocabulari (adjectius): tema5/9-Adjectius.md
+      - "Text: Les muses i l’etimologia": tema5/10-traueix.md
+  - "Tema 6: Flexió verbal. Tema de present":
+      - Tema de present i verbs temàtics: tema6/1-Present-VerbsTematics.md
+      - Imperfet, subjuntiu i imperatiu: tema6/2-Imperfet-Subjuntiu-Imperatiu.md
+      - Activitats 1 (conjugació verbs): tema6/3-Activitats-Conjugacio.md
+      - Activitats 2 (formes verbals): tema6/4-Activitats-FormesVerbals.md
+      - Activitats 3 (anàlisi i traducció): tema6/5-Activitats-AnalisiTraduccio.md
+      - Activitats 4 (Posa en grec): tema6/6-Activitats-PosaEnGrec.md
+      - Mots encreuats i Autoavaluació: tema6/7-Encreuats-Autoavaluacio.md
 
 
 
